--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Catalog OSS</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="relative flex h-dvh w-screen items-center justify-center overflow-hidden bg-neutral-950 select-none"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
