--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/OSS Icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#0a0a0a">
+    <meta name="color-scheme" content="dark" />
     <title>Catalog OSS</title>
   </head>
   <body>
-    <div id="root" class="relative flex h-dvh w-screen items-center justify-center overflow-hidden bg-neutral-950 select-none"></div>
+    <div
+      id="root"
+      class="relative flex h-dvh w-screen items-center justify-center overflow-hidden bg-neutral-950 select-none"
+    ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
