--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/OSS Icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="#0a0a0a" />
+    <meta name="color-scheme" content="dark" />
     <title>Catalog OSS</title>
   </head>
   <body>
