--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/OSS Icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark" />
-    <meta name="theme-color" content="#0a0a0a">
     <title>Catalog OSS</title>
   </head>
-  <body>
+  <body class="bg-neutral-950">
     <div
       id="root"
-      class="relative flex h-dvh w-screen items-center justify-center overflow-hidden bg-neutral-950 select-none"
+      class="relative flex h-dvh w-screen items-center justify-center overflow-hidden select-none"
     ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
